--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:theme="@style/Theme.ArchAndState"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".uistate.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_login"
             android:theme="@style/Theme.ArchAndState">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
